# TPack

./: .gitignore  CMakeLists.txt  README.md  tpack-config.cmake.in
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  combinatoric.cpp  main.cpp  orbit.cpp  rank.cpp
example/: CMakeLists.txt  README.md  example.cpp
include/tpack/: orbit.hpp  partition.hpp  rank.hpp
include/tpack/details/: binomial.hpp  factorial.hpp  level_columns_view.hpp
tests/: CMakeLists.txt  binomial.cpp  column_view.cpp  helper.hpp  orbit.cpp  partition.cpp  rank.cpp  rank_unrank.cpp
